# vids

./: .gitignore  Dockerfile_frontend  LICENSE.txt  README.md  Untitled Diagram.drawio  start.sh
backend/: Cargo.toml
backend/src/: error.rs  main.rs  solve.rs
common/: Cargo.toml
common/src/: lib.rs
doc/: fetch_videos.sh
docker/: Dockerfile_backend  docker-compose.yml  dockerBuild.sh  serve,py  start.sh  start_fe.sh
frontend/: Cargo.toml  Trunk.toml  index.html  styles.scss
frontend/src/: app.rs  main.rs
frontend/src/pages/: detail.rs  home.rs  loading.rs  mod.rs  nav.rs  phone.rs  playground.rs  video.rs  videos.rs  watch.rs
