[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
warp = { version = "0.4.2", features = ["server"] }

common = { version = "0.1.0", path = "../common" }
lazy_static = "1.5.0"
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread"] }

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"

#thiserror = "=1.0.24"
thiserror = "2.0.17"

walkdir = "2.5.0"
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
