[package]
name = "function_router"
version = "0.1.0"
edition = "2021"


[dependencies]
#yew = { git = "https://github.com/yewstack/yew/", features = ["csr", "serde"] }
yew = { version = "0.22", features = ["csr", "serde"] }
yew-router = "0.19.0"
#common = { version = "0.1.0", path = "../common" }
serde = { version = "1.0", features = ["derive"] }
gloo-net = "0.6"
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent"] }
js-sys = "0.3.70"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.105"
wasm-logger = "0.2"
log = "0.4"
#[lib]
#crate-type = ["cdylib", "rlib"]
#[build]
#target="wasm32-unknown-unknown"

[[bin]]
name = "function_router"
required-features = ["yew/csr"]
